Assert when changing interface display scale #54864

Closed
opened 2018-04-27 20:40:41 +02:00 by Dalai Felinto · 9 comments

Blender Version
Broken: 5f6c45498c
Worked: 5f6c45498c^

Short description of error
Blender crashes when I change UI scale to 4.0.

Exact steps for others to reproduce the error

  • Factory startup
  • User Preferences (Ctrl+Alt+U)
  • Interface > Display > 4.0
BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/editors/screen/area.c:1433, area_calc_totrct(), at 'sa->totrct.ymin >= 0'

Full backtrace: P663

**Blender Version** Broken: 5f6c45498c Worked: 5f6c45498c^ **Short description of error** Blender crashes when I change UI scale to 4.0. **Exact steps for others to reproduce the error** * Factory startup * User Preferences (Ctrl+Alt+U) * Interface > Display > 4.0 ``` BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/editors/screen/area.c:1433, area_calc_totrct(), at 'sa->totrct.ymin >= 0' ``` Full backtrace: [P663](https://archive.blender.org/developer/P663.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @JulianEisel
Removed subscriber: @dfelinto

Added subscriber: @JulianEisel Removed subscriber: @dfelinto
Julian Eisel was assigned by Dalai Felinto 2018-04-27 20:42:06 +02:00
Author
Owner

@JulianEisel this bug was introduced (or exposed?) in the top-bar merge. Could you take a look at it?

@JulianEisel this bug was introduced (or exposed?) in the top-bar merge. Could you take a look at it?
Author
Owner

In what I believe is a related note, if you use the following startup and userpref files you don't get a crash, however this is how the topbar action zones look like until you make them redraw in some way:

startup.blend

userpref.blend

glitch_ui.png

In what I believe is a related note, if you use the following startup and userpref files you don't get a crash, however this is how the topbar action zones look like until you make them redraw in some way: [startup.blend](https://archive.blender.org/developer/F3087832/startup.blend) [userpref.blend](https://archive.blender.org/developer/F3087831/userpref.blend) ![glitch_ui.png](https://archive.blender.org/developer/F3087837/glitch_ui.png)
Author
Owner

The issue has to do with screen_vertices_scale. In this function we are setting sv->vec.y to a negative number for the lower edge.

The issue has to do with `screen_vertices_scale`. In this function we are setting `sv->vec.y` to a negative number for the lower edge.
Member

Hmm, I'd say screen-verts must never have a negative coordinate, if so there's probably a bug. So the assert seems to be right. Would still have to check details though.

Hmm, I'd say screen-verts must never have a negative coordinate, if so there's probably a bug. So the assert seems to be right. Would still have to check details though.

This issue was referenced by 965e6ed54f

This issue was referenced by 965e6ed54f058c21ae6096a5449fb3d1e5235821
Author
Owner

The thing is, top-bar commit introduced asserts in area_calc_totrct() that would fail even for master. Which although correct, led to a very unstable 2.8.
My proposal is the following "fix" P670 (basically removing the asserts).

The thing is, top-bar commit introduced asserts in `area_calc_totrct()` that would fail even for master. Which although correct, led to a very unstable 2.8. My proposal is the following "fix" [P670](https://archive.blender.org/developer/P670.txt) (basically removing the asserts).
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54864
No description provided.